[gd_scene load_steps=6 format=3 uid="uid://b5p1e8ptxmvjk"]

[ext_resource type="Script" path="res://Personnages/npcVide.gd" id="1_ap6c6"]
[ext_resource type="Script" path="res://Personnages/CorpsNpc_Vide.gd" id="2_ener6"]
[ext_resource type="SpriteFrames" uid="uid://btps24o80hhxx" path="res://Personnages/tavernier/tavernierAnimation.tres" id="3_4sgnl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fp5oo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rcmmc"]
radius = 100.0

[node name="femme" type="Area2D"]
script = ExtResource("1_ap6c6")

[node name="CorpsNPC" type="CharacterBody2D" parent="."]
collision_layer = 4
script = ExtResource("2_ener6")

[node name="TimerAnimation" type="Timer" parent="CorpsNPC"]

[node name="AnimationNPC" type="AnimatedSprite2D" parent="CorpsNPC"]
sprite_frames = ExtResource("3_4sgnl")
animation = &"walk"
autoplay = "idle"

[node name="Hitbox" type="CollisionShape2D" parent="CorpsNPC"]
position = Vector2(0, 8.5)
shape = SubResource("CapsuleShape2D_fp5oo")

[node name="TimerCorrectionAnimation" type="Timer" parent="CorpsNPC"]

[node name="Zone_Detection_Joueur" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rcmmc")

[node name="Nom" type="Label" parent="."]
offset_left = -20.0
offset_top = -46.0
offset_right = 20.0
offset_bottom = -23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerDetection" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="CorpsNPC/TimerAnimation" to="CorpsNPC" method="_on_timer_animation_timeout"]
[connection signal="timeout" from="CorpsNPC/TimerCorrectionAnimation" to="CorpsNPC" method="_on_timer_correction_animation_timeout"]
